--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+html {
+  font-size: 10px;
+}
+.customApp {
+  /* display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 10rem 1fr; */
+}
+.customNav {
+  background-color: blacks;
+  /* grid-column: 2/-1;
+  grid-row: 1/2; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.customSidebar {
+  background-color: var(--secondaryColor);
+  /* grid-row: 1/-1; */
+}
+.customComp {
+  /* grid-column: 2/-1;
+  grid-row: 2/-1; */
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and(max-width:1024px) {
+  .customSidebar {
+    display: none;
   }
 }
